--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.14.2",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
+    "vue-toast-notification": "^3",
     "yup": "^1.4.0"
   }
 }
