--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "vue-router": "^4.3.2",
     "vue-toast-notification": "^3",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "sass": "^1.77.4"
   }
 }
