--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "@nuxtjs/i18n": "^8.0.0"
   }
 }
