--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "sass": "^1.77.4",
-    "@nuxtjs/i18n": "^8.0.0"
+    "@nuxtjs/color-mode": "^3.4.1",
+    "@nuxtjs/i18n": "^8.0.0",
+    "sass": "^1.77.4"
   }
 }
