--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.4.1",
+    "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/i18n": "^8.0.0",
     "sass": "^1.77.4"
   }
