--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install & Generate 🔧
         run: |
-          npm ci
+          npm install
           npm run generate
 
       - name: Deploy 🚀
