--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,5 +1,7 @@
 name: Build and Deploy
 
+run-name: Deploying ${{ github.actor }}'s site to GitHub Pages 🚀
+
 on:
   push:
     branches:
@@ -11,10 +13,13 @@ permissions:
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }}
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [20]
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
